working to fix the problem when importing two cvxgen projets

--- a/cvx/src/solvers/cvxgen_accel/Makefile
+++ b/cvx/src/solvers/cvxgen_accel/Makefile
@@ -6,6 +6,7 @@
 
 # Filename: Makefile.
 # Description: Basic Makefile.
+INPUT=accel
 OPT = -Wall -Os 
 # libmath is needed for sqrt, which is used only for reporting the gap. Can
 # remove if desired for production solvers..
@@ -17,7 +18,9 @@ CC = gcc
 all: cvxgen_lib
 cvxgen_lib: solver.o matrix_support.o ldl.o cvxgen_lib.o util.o  
 	gcc -shared -o libcvx.so cvxgen_lib.o solver.o util.o matrix_support.o ldl.o
-	mv libcvx.so ../cvxgen/libcvx_accel.so && cp solver.h ../cvxgen && mv ../cvxgen/solver.h ../cvxgen/solver_accel.h
+	 mv libcvx.so ../cvxgen/libcvx_$(INPUT).so && mv solver.h solver_$(INPUT).h && cp solver_$(INPUT).h ../cvxgen  && mv solver_$(INPUT).h solver.h  
+#the command objcopy above is needed to prevent conflict with other cvxgen generated files (in case you are using several cvxgen projects at the same time), see https://stackoverflow.com/questions/6940384/how-to-deal-with-symbol-collisions-between-statically-linked-libraries/6940389#6940389
+# objcopy --prefix-symbols=$(INPUT)_ libcvx.so
 
 # Include util.o for random functions and easy matrix printing.
 #cvxgen_lib: solver.o matrix_support.o ldl.o util.o cvxgen_lib.o
@@ -30,4 +33,5 @@ cvxgen_lib.o: solver.h
 .PHONY : clean
 clean :
 	rm -f *.o cvxgen_lib libcvx.so
+
 
