--- a/cvx/src/solvers/cvxgen_accel/Makefile
+++ b/cvx/src/solvers/cvxgen_accel/Makefile
@@ -16,11 +16,10 @@ LDFLAGS= -shared
 CC = gcc
 .PHONY: all
 all: cvxgen_lib
-cvxgen_lib: solver.o matrix_support.o ldl.o cvxgen_lib.o util.o  
+cvxgen_lib: solver.o matrix_support.o ldl.o cvxgen_lib.o util.o 
 	gcc -shared -o libcvx.so cvxgen_lib.o solver.o util.o matrix_support.o ldl.o
-	 mv libcvx.so ../cvxgen/libcvx_$(INPUT).so && mv solver.h solver_$(INPUT).h && cp solver_$(INPUT).h ../cvxgen  && mv solver_$(INPUT).h solver.h  
-#the command objcopy above is needed to prevent conflict with other cvxgen generated files (in case you are using several cvxgen projects at the same time), see https://stackoverflow.com/questions/6940384/how-to-deal-with-symbol-collisions-between-statically-linked-libraries/6940389#6940389
-# objcopy --prefix-symbols=$(INPUT)_ libcvx.so
+	 mv libcvx.so ../cvxgen/libcvx_$(INPUT).so && cp interface_$(INPUT).h ../cvxgen    
+
 
 # Include util.o for random functions and easy matrix printing.
 #cvxgen_lib: solver.o matrix_support.o ldl.o util.o cvxgen_lib.o
@@ -33,5 +32,7 @@ cvxgen_lib.o: solver.h
 .PHONY : clean
 clean :
 	rm -f *.o cvxgen_lib libcvx.so
+
+
 
 
