--- a/cvx/src/solvers/cvxgen_vel/Makefile
+++ b/cvx/src/solvers/cvxgen_vel/Makefile
@@ -1,12 +1,4 @@
-# Produced by CVXGEN, 2018-03-30 10:48:03 -0400.
-# CVXGEN is Copyright (C) 2006-2017 Jacob Mattingley, jem@cvxgen.com.
-# The code in this file is Copyright (C) 2006-2017 Jacob Mattingley.
-# CVXGEN, or solvers produced by CVXGEN, cannot be used for commercial
-# applications without prior written permission from Jacob Mattingley.
-
-# Filename: Makefile.
-# Description: Basic Makefile.
-INPUT=jerk
+INPUT=vel
 OPT = -Wall -O3  
 # The option -03 will compile with all the optimizations available for max performance
 # libmath is needed for sqrt, which is used only for reporting the gap. Can
@@ -33,4 +25,3 @@ cvxgen_lib.o: solver.h
 .PHONY : clean
 clean :
 	rm -f *.o cvxgen_lib libcvx.so
-
