--- a/cvx/param/cvx.yaml
+++ b/cvx/param/cvx.yaml
@@ -6,7 +6,7 @@ use_ff: true # use feedforward
 wdx: 20.0  #[m] world dimension in x
 wdy: 20.0  #[m] world dimension in y
 wdz: 4.0   #[m] world dimension in z
-res: 0.15  #[m] cell dimension
+res: 0.15  #[m] cell dimension = resolution of the map
 
 
 dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer pubGoal
@@ -16,29 +16,39 @@ drone_radius: 0.15  #(m) Used for collision checking
 
 offset: 5  # Replanning offset (the initial conditions are taken OFFSET states farther from the last published goal)
 
-Ra: 2.0             # [m] Radius of the first sphere
+Ra: 4.0             # [m] Radius of the first sphere
 Rb: 6.0             # [m] Radius of the second sphere
 w_max: 1            # [rd/s] Maximum angular velocity
 alpha_0: 1          #[rd] threshold to ignore current JPS solution, and consider the old one
 z_ground: 0         #[m] points below this are considered ground
 inflation_jps: 0.8  #[m] The obstacles are inflated (to run JPS) by this amount
+factor_jps: 2  #[m] JPS is run with resolution=factor_jps*(resolution of the map)
 
 
-v_max: 2.0   #[m/s]
-a_max: 2.0   #[m/s2]
-j_max: 10.0  #[m/s3]
+v_max: 10.0   #[m/s]
+a_max: 10.0   #[m/s2]
+j_max: 50.0  #[m/s3]
 
 
 z_land: 0.02 #[m] z goal for landing
 
-
+#Ways to force the drone to fly faster:
+#increase Ra
+#increase v_max, a_max, j_max
 
 #Ways to make the planner faster:
 # Increase deltaT in each cvxgen iteration
 # Omit visualization stuff
 # Timer of the mapper
+# More downsampling in the frontier point cloud
+# downsample instanteneous point clouds from the camera?
+# compile cvxgen with the option -03 (see makefile of cvxgen) instead of -0s
+# set a different resolution for the JPS solver (change factor_jps)
+# reduce dimensions of the map
 
 #Things to try
 #Change radius spheres Sa and Sb
 #verify publish index and offset are working
 
+#Things to do
+#Change -1 in the instantaneous point cloud
