--- a/cvx/param/cvx.yaml
+++ b/cvx/param/cvx.yaml
@@ -21,12 +21,13 @@ Rb: 6.0             # [m] Radius of the second sphere
 w_max: 1            # [rd/s] Maximum angular velocity
 alpha_0: 0          #[rd] threshold to ignore current JPS solution, and consider the old one
 z_ground: 0         #[m] points below this are considered ground
+z_max: 1.5         #[m] JPS is not allowed to give a solution that goes higher than this height
 inflation_jps: 0.8  #[m] The obstacles are inflated (to run JPS) by this amount
-factor_jps: 2  #[m] JPS is run with resolution=factor_jps*(resolution of the map)
+factor_jps: 1  #[m] JPS is run with resolution=factor_jps*(resolution of the map)
 
 
-v_max: 10.0   #[m/s]
-a_max: 10.0   #[m/s2]
+v_max: 4.0   #[m/s]
+a_max: 20.0   #[m/s2]
 j_max: 50.0  #[m/s3]
 
 q: 100000  #[-] weight to the 2nd term of the cost function for cvxgen
@@ -47,6 +48,7 @@ z_land: 0.02 #[m] z goal for landing
 # reduce dimensions/increase resolution of the map
 # Run the mapper as a nodelet
 # Reduce alpha_0
+# Max out Jetson TX2 (overclocking, modprob,...)
 
 #Things to try
 #Change radius spheres Sa and Sb
@@ -56,3 +58,5 @@ z_land: 0.02 #[m] z goal for landing
 #Change -1 in the instantaneous point cloud
 #Run 
 # Omit visualization stuff
+# Selection between J1 and J2 
+# z_max change
