--- a/cvx/param/cvx.yaml
+++ b/cvx/param/cvx.yaml
@@ -6,23 +6,23 @@ use_ff: true # use feedforward
 wdx: 20.0  #[m] world dimension in x
 wdy: 20.0  #[m] world dimension in y
 wdz: 4.0   #[m] world dimension in z
-res: 0.15  #[m] cell dimension = resolution of the map
+res: 0.10  #[m] cell dimension = resolution of the map
 
 
 dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer pubGoal
 goal_radius: 0.2    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
-drone_radius: 0.15  #(m) Used for collision checking
+drone_radius: 0.35  #(m) Used for collision checking
 
 
-offset: 5  # Replanning offset (the initial conditions are taken OFFSET states farther from the last published goal)
+offset: 10  # Replanning offset (the initial conditions are taken OFFSET states farther from the last published goal)
 
-Ra: 4.0             # [m] Radius of the first sphere
+Ra: 0.7            # [m] Minimum radius of the first sphere
 Rb: 6.0             # [m] Radius of the second sphere
 w_max: 1            # [rd/s] Maximum angular velocity
 alpha_0: 0          #[rd] threshold to ignore current JPS solution, and consider the old one
-z_ground: 0         #[m] points below this are considered ground
-z_max: 1.5         #[m] JPS is not allowed to give a solution that goes higher than this height
-inflation_jps: 0.8  #[m] The obstacles are inflated (to run JPS) by this amount
+z_ground: 0.2         #[m] points below this are considered ground
+z_max: 2         #[m] JPS is not allowed to give a solution that goes higher than this height
+inflation_jps: 0.35  #[m] The obstacles are inflated (to run JPS) by this amount
 factor_jps: 1  #[m] JPS is run with resolution=factor_jps*(resolution of the map)
 
 
