--- a/cvx/param/cvx.yaml
+++ b/cvx/param/cvx.yaml
@@ -2,6 +2,7 @@
 #debug: true
 
 use_ff: true # use feedforward
+visual: false #publish visualization stuff
 
 wdx: 20.0  #[m] world dimension in x
 wdy: 20.0  #[m] world dimension in y
@@ -11,24 +12,24 @@ res: 0.10  #[m] cell dimension = resolution of the map
 
 dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer pubGoal
 goal_radius: 0.2    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
-drone_radius: 0.35  #(m) Used for collision checking
+drone_radius: 0.42  #(m) Used for collision checking
 
 
-offset: 10  # Replanning offset (the initial conditions are taken OFFSET states farther from the last published goal)
+offset: 5  # Replanning offset (the initial conditions are taken OFFSET states farther from the last published goal)
 
 Ra: 0.7            # [m] Minimum radius of the first sphere
 Rb: 6.0             # [m] Radius of the second sphere
 w_max: 1            # [rd/s] Maximum angular velocity
-alpha_0: 0          #[rd] threshold to ignore current JPS solution, and consider the old one
+alpha_0: 0          #[rd] threshold to ignore current JPS solution, and consider the old one. 0--> always decide
 z_ground: 0.2         #[m] points below this are considered ground
 z_max: 2         #[m] JPS is not allowed to give a solution that goes higher than this height
-inflation_jps: 0.35  #[m] The obstacles are inflated (to run JPS) by this amount
+inflation_jps: 0.42  #[m] The obstacles are inflated (to run JPS) by this amount
 factor_jps: 1  #[m] JPS is run with resolution=factor_jps*(resolution of the map)
 
 
-v_max: 4.0   #[m/s]
+v_max: 6.0   #[m/s]
 a_max: 20.0   #[m/s2]
-j_max: 50.0  #[m/s3]
+j_max: 100.0  #[m/s3]
 
 q: 100000  #[-] weight to the 2nd term of the cost function for cvxgen
 
