--- a/upenn/mpl_ros/mpl_test_node/CMakeLists.txt
+++ b/upenn/mpl_ros/mpl_test_node/CMakeLists.txt
@@ -18,6 +18,9 @@ target_link_libraries(test_primitive_replan ${MOTION_PRIMITIVE_LIBRARY_LIBRARIES
 cs_add_executable(test_primitive_cloud src/test_primitive_cloud.cpp)
 target_link_libraries(test_primitive_cloud ${MOTION_PRIMITIVE_LIBRARY_LIBRARIES})
 
+cs_add_executable(comparison_upenn src/comparison_upenn.cpp)
+target_link_libraries(comparison_upenn ${MOTION_PRIMITIVE_LIBRARY_LIBRARIES})
+
 cs_install()
 
 cs_export()
