--- a/cvx/param/cvx.yaml
+++ b/cvx/param/cvx.yaml
@@ -1,13 +1,13 @@
-# Params for CVX planner
+#Params for CVX planner
 #debug: true
 
-use_ff: true # use feedforward
+use_ff: true # use feedforward IT HAS TO BE TRUE!!! (if not the program crashes, this is a ToDo)
 visual: true #publish visualization stuff
 
-wdx: 8.0  #[m] world dimension in x
+wdx: 8.0  #[m:] world dimension in x
 wdy: 8.0  #[m] world dimension in y
 wdz: 3.0   #[m] world dimension in z
-res: 0.3  #[m] cell dimension = resolution of the map
+res: 0.25  #[m] cell dimension = resolution of the map
 
 
 dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer pubGoal
@@ -19,7 +19,7 @@ offset: 10  # Replanning offset (the initial conditions are taken OFFSET states 
 
 Ra: 0.5            # [m] Minimum radius of the first sphere
 Rb: 6.0             # [m] Radius of the second sphere
-w_max: 1            # [rd/s] Maximum angular velocity
+w_max: 0.6            # [rd/s] Maximum angular velocity
 alpha_0: 0.25         #[rd] threshold to ignore current JPS solution, and consider the old one. 0--> always decide
 z_ground: 0.2         #[m] points below this are considered ground
 z_max: 1.5         #[m] JPS is not allowed to give a solution that goes higher than this height
@@ -27,9 +27,9 @@ inflation_jps: 0.6  #[m] The obstacles are inflated (to run JPS) by this amount
 factor_jps: 1  #[m] JPS is run with resolution=factor_jps*(resolution of the map)
 
 
-v_max: 1   #[m/s]
+v_max: 2   #[m/s]
 a_max: 4   #[m/s2]
-j_max: 15  #[m/s3]
+j_max: 5  #[m/s3]
 
 q: 100000  #[-] weight to the 2nd term of the cost function for cvxgen
 
