--- a/cvx/param/cvx.yaml
+++ b/cvx/param/cvx.yaml
@@ -25,15 +25,15 @@ Ra_max: 4            # [m] Maximum radius of the first sphere
 Rb: 6.0             # [m] Radius of the second sphere
 w_max: 0.6            # [rd/s] Maximum angular velocity
 alpha_0: 0.25         #[rd] threshold to ignore current JPS solution, and consider the old one. 0--> always decide
-z_ground: 0.3         #[m] points below this are considered ground
-z_max: 2         #[m] JPS is not allowed to give a solution that goes higher than this height
+z_ground: 0.5         #[m] points below this are considered ground
+z_max: 1.8         #[m] JPS is not allowed to give a solution that goes higher than this height
 inflation_jps: 0.5  #[m] The obstacles are inflated (to run JPS) by this amount
 factor_jps: 1  #[m] JPS is run with resolution=factor_jps*(resolution of the map)
 
 
-v_max: 4   #[m/s]
-a_max: 6   #[m/s2]
-j_max: 10  #[m/s3]
+v_max: 2   #[m/s]  #4 6 10 en los experimentos ultimos
+a_max: 3   #[m/s2]
+j_max: 5  #[m/s3]
 
 q: 100000  #[-] weight to the 2nd term of the cost function for cvxgen
 
