test with continuous version in Gurobi working

--- a/cvx/CMakeLists.txt
+++ b/cvx/CMakeLists.txt
@@ -50,10 +50,15 @@ target_link_libraries(${PROJECT_NAME}_node ${catkin_LIBRARIES} ${PCL_LIBRARIES} 
 add_dependencies(${PROJECT_NAME}_node ${catkin_EXPORTED_TARGETS})
 
 
-add_executable(gurobi_exec gurobi.cpp)
+add_executable(gurobi_continuous_exec gurobi_continuous.cpp)
 set(GUROBI_LIBRARIES "$ENV{GUROBI_HOME}/lib/libgurobi_c++.a;$ENV{GUROBI_HOME}/lib/libgurobi80.so;$ENV{GUROBI_HOME}/lib/" )
-# target_link_libraries(gurobi_exec ${GUROBI_LIBRARIES})
-target_link_libraries(gurobi_exec ${GUROBI_LIBRARIES})
+# target_link_libraries(gurobi_continuous_exec ${GUROBI_LIBRARIES})
+target_link_libraries(gurobi_continuous_exec ${GUROBI_LIBRARIES})
+
+add_executable(gurobi_discrete_exec gurobi_discrete.cpp)
+set(GUROBI_LIBRARIES "$ENV{GUROBI_HOME}/lib/libgurobi_c++.a;$ENV{GUROBI_HOME}/lib/libgurobi80.so;$ENV{GUROBI_HOME}/lib/" )
+# target_link_libraries(gurobi_discrete_exec ${GUROBI_LIBRARIES})
+target_link_libraries(gurobi_discrete_exec ${GUROBI_LIBRARIES})
 
 
 
