--- a/cvx/CMakeLists.txt
+++ b/cvx/CMakeLists.txt
@@ -50,24 +50,26 @@ catkin_package(
 
 include_directories(${catkin_INCLUDE_DIRS})
 
-add_executable(${PROJECT_NAME}_node src/main.cpp src/cvx.cpp)
-target_link_libraries(${PROJECT_NAME}_node ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${JPS3D_LIBRARIES} ${DECOMP_UTIL_LIBRARIES} ${CMAKE_CURRENT_LIST_DIR}/src/solvers/cvxgen/libcvx_vel.so ${CMAKE_CURRENT_LIST_DIR}/src/solvers/cvxgen/libcvx_accel.so ${CMAKE_CURRENT_LIST_DIR}/src/solvers/cvxgen/libcvx_jerk.so )
+set(GUROBI_LIBRARIES "$ENV{GUROBI_HOME}/lib/libgurobi_c++.a;$ENV{GUROBI_HOME}/lib/libgurobi80.so;$ENV{GUROBI_HOME}/lib/" )
+
+add_executable(${PROJECT_NAME}_node src/main.cpp src/cvx.cpp src/solvers/solverGurobi.cpp)
+target_link_libraries(${PROJECT_NAME}_node ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${JPS3D_LIBRARIES} ${DECOMP_UTIL_LIBRARIES} ${CMAKE_CURRENT_LIST_DIR}/src/solvers/cvxgen/libcvx_vel.so ${CMAKE_CURRENT_LIST_DIR}/src/solvers/cvxgen/libcvx_accel.so ${CMAKE_CURRENT_LIST_DIR}/src/solvers/cvxgen/libcvx_jerk.so ${GUROBI_LIBRARIES})
 add_dependencies(${PROJECT_NAME}_node ${catkin_EXPORTED_TARGETS} )
 
 
-add_executable(gurobi_continuous_exec gurobi_continuous.cpp)
-set(GUROBI_LIBRARIES "$ENV{GUROBI_HOME}/lib/libgurobi_c++.a;$ENV{GUROBI_HOME}/lib/libgurobi80.so;$ENV{GUROBI_HOME}/lib/" )
+#add_executable(gurobi_continuous_exec gurobi_continuous.cpp)
+#set(GUROBI_LIBRARIES "$ENV{GUROBI_HOME}/lib/libgurobi_c++.a;$ENV{GUROBI_HOME}/lib/libgurobi80.so;$ENV{GUROBI_HOME}/lib/" )
 # target_link_libraries(gurobi_continuous_exec ${GUROBI_LIBRARIES})
-target_link_libraries(gurobi_continuous_exec ${GUROBI_LIBRARIES})
+#target_link_libraries(gurobi_continuous_exec ${GUROBI_LIBRARIES})
 
-add_executable(gurobi_discrete_exec gurobi_discrete.cpp)
-set(GUROBI_LIBRARIES "$ENV{GUROBI_HOME}/lib/libgurobi_c++.a;$ENV{GUROBI_HOME}/lib/libgurobi80.so;$ENV{GUROBI_HOME}/lib/" )
+#add_executable(gurobi_discrete_exec gurobi_discrete.cpp)
+#set(GUROBI_LIBRARIES "$ENV{GUROBI_HOME}/lib/libgurobi_c++.a;$ENV{GUROBI_HOME}/lib/libgurobi80.so;$ENV{GUROBI_HOME}/lib/" )
 # target_link_libraries(gurobi_discrete_exec ${GUROBI_LIBRARIES})
-target_link_libraries(gurobi_discrete_exec ${GUROBI_LIBRARIES})
+#target_link_libraries(gurobi_discrete_exec ${GUROBI_LIBRARIES})
 
-add_executable(solverGurobi_exec src/solvers/solverGurobi.cpp)
+#add_executable(solverGurobi_exec src/solvers/solverGurobi.cpp)
 
-target_link_libraries(solverGurobi_exec ${GUROBI_LIBRARIES})
+#target_link_libraries(solverGurobi_exec ${GUROBI_LIBRARIES})
 
 
 
