--- a/cvx/param/cvx.yaml
+++ b/cvx/param/cvx.yaml
@@ -84,6 +84,7 @@ dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer
 goal_radius: 0.2    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
 drone_radius: 0.42  #(m) Used for collision checking
 
+N: 10  #[-] Number of discretization points in the trajectory
 
 offset: 10  # Replanning offset (the initial conditions are taken OFFSET states farther from the last published goal)
 
