--- a/upenn/DecompROS/DecompUtil/CMakeLists.txt
+++ b/upenn/DecompROS/DecompUtil/CMakeLists.txt
@@ -14,21 +14,21 @@ include_directories(${EIGEN3_INCLUDE_DIRS} include)
 
 include(CTest)
 
-add_executable(test_seed_decomp test/test_seed_decomp.cpp)
-target_link_libraries(test_seed_decomp ${Boost_LIBRARIES})
-add_test(test_seed_decomp test_seed_decomp)
+#add_executable(test_seed_decomp test/test_seed_decomp.cpp)
+#target_link_libraries(test_seed_decomp ${Boost_LIBRARIES})
+#add_test(test_seed_decomp test_seed_decomp)
 
-add_executable(test_line_segment test/test_line_segment.cpp)
-target_link_libraries(test_line_segment ${Boost_LIBRARIES})
-add_test(test_line_segment test_line_segment ${CMAKE_SOURCE_DIR}/data/obstacles.txt)
+#add_executable(test_line_segment test/test_line_segment.cpp)
+#target_link_libraries(test_line_segment ${Boost_LIBRARIES})
+#add_test(test_line_segment test_line_segment ${CMAKE_SOURCE_DIR}/data/obstacles.txt)
 
-add_executable(test_ellipsoid_decomp test/test_ellipsoid_decomp.cpp)
-target_link_libraries(test_ellipsoid_decomp ${Boost_LIBRARIES})
-add_test(test_ellipsoid_decomp test_ellipsoid_decomp ${CMAKE_SOURCE_DIR}/data/obstacles.txt)
+#add_executable(test_ellipsoid_decomp test/test_ellipsoid_decomp.cpp)
+#target_link_libraries(test_ellipsoid_decomp ${Boost_LIBRARIES})
+#add_test(test_ellipsoid_decomp test_ellipsoid_decomp ${CMAKE_SOURCE_DIR}/data/obstacles.txt)
 
-add_executable(test_iterative_decomp test/test_iterative_decomp.cpp)
-target_link_libraries(test_iterative_decomp ${Boost_LIBRARIES})
-add_test(test_iterative_decomp test_iterative_decomp ${CMAKE_SOURCE_DIR}/data/obstacles.txt)
+#add_executable(test_iterative_decomp test/test_iterative_decomp.cpp)
+#target_link_libraries(test_iterative_decomp ${Boost_LIBRARIES})
+#add_test(test_iterative_decomp test_iterative_decomp ${CMAKE_SOURCE_DIR}/data/obstacles.txt)
 
 install(FILES "${PROJECT_NAME}Config.cmake" "${PROJECT_NAME}ConfigVersion.cmake"
   DESTINATION "share/${PROJECT_NAME}/cmake")
