--- a/cvx/param/cvx.yaml
+++ b/cvx/param/cvx.yaml
@@ -107,3 +107,8 @@ j_max: 8.0  #[m/s3]
 q: 100  #[-] weight to the 2nd term of the cost function. If it's very big (>1000), Gurobi fails!! (numerical issues)
 
 z_land: 0.02 #[m] z goal for landing
+
+factor_initial_whole: 2
+factor_final_whole: 5
+factor_initial_rescue: 2
+factor_final_rescue: 5
