--- a/cvx/param/cvx.yaml
+++ b/cvx/param/cvx.yaml
@@ -84,8 +84,8 @@ dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer
 goal_radius: 0.2    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
 drone_radius: 0.42  #(m) Used for collision checking
 
-N_whole: 4  #[-] Number of discretization points in the whole trajectory
-N_rescue: 4  #[-] Number of discretization points in the rescue path
+N_whole: 6  #[-] Number of discretization points in the whole trajectory
+N_rescue: 6  #[-] Number of discretization points in the rescue path
 
 offset: 10  # Replanning offset (the initial conditions are taken OFFSET states farther from the last published goal)
 offset_rp: 50 #The rescue path starts X states ahead of the beginning of the whole trajectory
@@ -97,7 +97,7 @@ w_max: 1            # [rd/s] Maximum angular velocity
 alpha_0: 0.25         #[rd] threshold to ignore current JPS solution, and consider the old one. 0--> always decide
 z_ground: 0.2         #[m] points below this are considered ground
 z_max: 2         #[m] JPS is not allowed to give a solution that goes higher than this height
-inflation_jps: 0.42  #[m] The obstacles are inflated (to run JPS) by this amount
+inflation_jps: 0.5  #[m] The obstacles are inflated (to run JPS) by this amount
 factor_jps: 1  #[m] JPS is run with resolution=factor_jps*(resolution of the map)
 
 
@@ -117,7 +117,7 @@ factor_initial_rescue: 1
 factor_final_rescue: 2
 factor_increment_rescue: 1
 
-max_poly: 2
+max_poly: 4 #Should be less than N_whole and N_rescue
 dist_max_vertexes: 1.5 #[m] Maximum distance between two vertexes before doing the cvx decomp (more vertexes are added to force this)
 gurobi_threads: 1 #[threads] Number of threads that Gurobi will use. If computer is maxed out, threads=1 works faster!
 gurobi_verbose: 0 #Verbosity of Gurobi. 0 or 1
