--- a/cvx/param/cvx.yaml
+++ b/cvx/param/cvx.yaml
@@ -71,7 +71,7 @@
 
 
 use_ff: true # use feedforward
-visual: true #publish visualization stuff
+visual: false #publish visualization stuff
 use_vel: false # use velocity. If false, r2=r1;
 
 wdx: 20.0  #[m] world dimension in x
@@ -97,7 +97,7 @@ w_max: 1            # [rd/s] Maximum angular velocity
 alpha_0_deg: 15         #[deg] threshold to ignore current JPS solution, and consider the old one. 0--> always decide
 z_ground: 0.2         #[m] points below this are considered ground
 z_max: 2         #[m] JPS is not allowed to give a solution that goes higher than this height
-inflation_jps: 0.5  #[m] The obstacles are inflated (to run JPS) by this amount
+inflation_jps: 0.47  #[m] The obstacles are inflated (to run JPS) by this amount
 factor_jps: 1  #[m] JPS is run with resolution=factor_jps*(resolution of the map)
 
 
