--- a/cvx/param/cvx.yaml
+++ b/cvx/param/cvx.yaml
@@ -28,6 +28,8 @@ Ra: 0.5            # [m] Minimum radius of the first sphere
 Ra_max: 2.5            # [m] Maximum radius of the first sphere
 Rb: 9.0             # [m] Radius of the second sphere
 w_max: 0.4            # [rd/s] Maximum angular velocity
+alpha_filter_dyaw: 0.92  #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
+
 alpha_0_deg: 1500         #[deg] threshold to ignore current JPS solution, and consider the old one. 0--> always decide
 z_ground: 0.75         #[m] points below this are considered ground
 z_max: 2         #[m] JPS is not allowed to give a solution that goes higher than this height
